# couch-potato

./: .gitignore  README.md  hatch.toml  pyproject.toml  requirements.txt  test_requirements.txt
.github/workflows/: python-format.yml  python-test.yml
couch-potato/: _model.py  _types.py  couch_potato.py  errors.py  fields.py  model.py
src/couch_potato/: __init__.py  _context.py  _model.py  _types.py  couch_potato.py  errors.py  fields.py  model.py
tests/: conftest.py  test_dummy.py  test_fields.py
